--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: 154.12.35.230, port: 31522, type: vmess, uuid: ad6cb146-a1d1-4964-9e0b-b2c1af75cad8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [154.12.35.230]}}}
-  - {name: 🇫🇷 法国-2.73MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇹🇭 泰国-2.75MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.89, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-178.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-2.92MB/s(Youtube:不良林), server: 134.195.196.89, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-458.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-470.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.03MB/s(Youtube:不良林), server: 195.154.200.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 台湾-10.93MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 97.64.122.63, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: 97.64.122.63, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
   - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -73,30 +73,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇹🇭 泰国-2.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
