--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-3.05MB/s(Youtube:不良林), server: 134.195.196.89, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-470.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-544.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-286.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.89, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇳 中国-396.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.33MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-182.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-662.6KB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.74MB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇫🇷 法国-895.0KB/s(Youtube:不良林), server: 195.154.200.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-4.69MB/s(Youtube:不良林), server: 97.64.122.63, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
   - {name: 🇺🇸 美国-4.39MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.89, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-355.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-662.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.74MB/s(Youtube:不良林)
       - 🇫🇷 法国-895.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
